h1. Release Notes for Sirius

{toc:style=disc|minLevel=2|maxLevel=3}

This document contains the release notes for recent major releases of Sirius. See also "the release notes from previous versions":Release_Notes_Previous.html for details about older releases.

h2(#sirius7.0.7). Changes in Sirius 7.0.7

h3. User-Visible Changes

h3. Specifier-Visible Changes

h3. Developer-Visible Changes

h2(#sirius7.0.6). Changes in Sirius 7.0.6

h3. User-Visible Changes

* <span class="label label-success">Added</span> In a tree editor, if the @Shift@ key is pressed during using the @left arrow@ key, a collapse all is done instead of a simple collapse. This is the same for expand with @Shift@ + @right arrow@ key. You can refer to "navigation documentation":user/trees/Trees.html#navigation for more details.
* <span class="label label-info">Modified</span> In a tree editor, if the expand is done with the right arrow key, the behavior is now OK. Before this version, if the expand is done for the first time with the right arrow key, only a blank child is displayed. You can refer to "bugzilla 549352":https://bugs.eclipse.org/bugs/show_bug.cgi?id=549352 for more details.
* <span class="label label-info">Modified</span> In a tree or a table representation, the direct edit is no longer accessible with any alphanumeric character key pressed, but only with double-clicking or pressing _F2_ or _Return_ (as the documentation always said). It is possible to restore the previous behavior by setting the system property @org.eclipse.sirius.ui.restoreBehaviorEnablingDirectEditOnAlphanumericKey@ to true

h3. Specifier-Visible Changes
