@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2016, 2017 Obeo.
+ * Copyright (c) 2016, 2022 Obeo.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License 2.0
  * which accompanies this distribution, and is available at
@@ -12,6 +12,7 @@
  *******************************************************************************/
 package org.eclipse.sirius.properties.core.api;
 
+import java.util.ArrayList;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Set;
@@ -33,18 +34,55 @@ public class SiriusInputDescriptor implements InputDescriptor {
     private final SiriusContext context;
 
     /**
+     * The list of all contexts, each determined from the list of all selected elements.
+     */
+    private List<SiriusContext> contextSelections;
+
+    /**
+     * Creates a SiriusInputDescriptor from the specified input.
+     * 
+     * @param input
+     *            the original input.
+     * @param rawSelection
+     *            the list of all selected elements.
+     */
+    public SiriusInputDescriptor(Object input, List<Object> rawSelection) {
+        this.contextSelections = new ArrayList<>();
+        if (!rawSelection.contains(input)) {
+            rawSelection.add(0, input);
+        }
+        for (Object selection : rawSelection) {
+            this.contextSelections.add(SiriusContext.from(selection));
+        }
+        this.context = SiriusContext.from(input);
+    }
+
+    /**
      * Creates a SiriusInputDescriptor from the specified input.
      * 
      * @param input
      *            the original input.
      */
     public SiriusInputDescriptor(Object input) {
-        this.context = SiriusContext.from(input);
+        this(input, new ArrayList<Object>());
     }
 
     @Override
     public Object getOriginalSelection() {
         return context.getInput();
+    }
+
+    /**
+     * The list of original selections before any interpretation or adaptation.
+     *
+     * @return the original selections.
+     */
+    public List<Object> getOriginalSelections() {
+        List<Object> result = new ArrayList<>();
+        for (SiriusContext siriusContext : contextSelections) {
+            result.add(siriusContext.getInput());
+        }
+        return result;
     }
 
     @Override
@@ -55,6 +93,23 @@ public class SiriusInputDescriptor implements InputDescriptor {
         } else {
             return null;
         }
+    }
+
+    /**
+     * The list of semantic model elements of whom properties should be displayed, as determined from the original
+     * selections.
+     *
+     * @return the model elements whose properties to display.
+     */
+    public List<EObject> getSemanticElements() {
+        List<EObject> result = new ArrayList<>();
+        for (SiriusContext siriusContext : contextSelections) {
+            Option<EObject> obj = siriusContext.getMainSemanticElement();
+            if (obj.some()) {
+                result.add(obj.get());
+            }
+        }
+        return result;
     }
 
     /**
@@ -81,6 +136,17 @@ public class SiriusInputDescriptor implements InputDescriptor {
      */
     public SiriusContext getFullContext() {
         return context;
+    }
+
+    /**
+     * Returns the list of all Sirius contexts, each determined from the list of all the selected elements, which may
+     * include addition Sirius-specific information in addition to what can be exposed through the generic
+     * {@link InputDescriptor} API.
+     * 
+     * @return the list of all Sirius contexts, each determined from the list of all the selected elements.
+     */
+    public List<SiriusContext> getContextSelections() {
+        return contextSelections;
     }
 
 }
